--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>Qooute of the day</header>
+        <header>Qoute of the day</header>
         <div class="content">
             <div class="qoute-area">
                 <i class="fas fa-quote-left"></i>
                 <p class="qoute">Lorem ipsum</p>
                 <i class="fas fa-quote-right"></i>
             </div>
-            <div class="quthor"></div>
+            <div class="author">
+                <span>__</span>
+                <span class="name">Lorem ipsum</span>
+            </div>
         </div>
         <div class="buttons">
             <div class="features">
                 <ul>
                     <li class="sound"><i class="fas fa-volume-up"></i></li>
                     <li class="copy"><i class="fas fa-copy"></i></li>
-                    <li class="twitter"><i class="fas fa-twitter"></i></li>
+                    <li class="twitter"><i class="fab fa-twitter"></i></li>
                 </ul>
+                <button>New Quote</button>
             </div>
         </div>
     </div>
