--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>Qoute of the day</header>
+        <header>Quote of the day</header>
         <div class="content">
             <div class="qoute-area">
                 <i class="fas fa-quote-left"></i>
-                <p class="qoute">Lorem ipsum</p>
+                <p class="quote">Lorem ipsum</p>
                 <i class="fas fa-quote-right"></i>
             </div>
             <div class="author">
@@ -33,5 +33,8 @@
             </div>
         </div>
     </div>
+
+    <script src="/apps/js/script.js"></script>
+
 </body>
 </html>
